--- a/assets/html/partials/footer.html
+++ b/assets/html/partials/footer.html
@@ -1,5 +1,10 @@
 <footer>
   <div class="container small text-muted py-3">
     2019 &copy; HTML Starter licensed under MIT for better web
+    Copyright &copy; 
+        <script>
+            var CurrentYear = new Date().getFullYear()
+            document.write(CurrentYear)
+        </script>
   </div>
 </footer>
