--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,34 +3,37 @@
 
 // Abstracts
 // - tools and helpers
-@import "./abstracts/functions";
-@import "./abstracts/variables";
-@import "./abstracts/mixins";
+//@import "./abstracts/functions";
+//@import "./abstracts/variables";
+//@import "./abstracts/mixins";
 
 // Vendors
 // - CSS from external libraries and frameworks
-@import "./vendors/bootstrap";
+//@import "./vendors/bootstrap";
+@import "./vendors/bootstrap4";
 
 // Base
 // - standard styles for commonly elements
-@import "./base/base";
-@import "./base/helpers";
-@import "./base/fonts";
-@import "./base/typography";
+//@import "./base/base";
+//@import "./base/helpers";
+//@import "./base/fonts";
+//@import "./base/typography";
 
 // Components
 // - for small, reusable pieces
-@import "./components/buttons";
+//@import "./components/buttons";
 
 // Layout
 // - everything that takes part in laying out the site/application
-@import "./layout/header";
-@import "./layout/footer";
+//@import "./layout/header";
+//@import "./layout/footer";
 
 // Pages
 // - page-specific styles
-@import "./pages/home";
+//@import "./pages/home";
+@import "./pages/pricing";
+@import "./pages/product";
 
 // Themes
 // - for different aspects
-@import "./themes/default";
+//@import "./themes/default";
