added jumbotron and cleanup

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -33,6 +33,7 @@
 //@import "./pages/home";
 @import "./pages/pricing";
 @import "./pages/product";
+//@import "./pages/jumbotron";
 
 // Themes
 // - for different aspects
