--- a/assets/html/partials/navbar.html
+++ b/assets/html/partials/navbar.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a class="nav-link" href="starter.html">Starter</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="jumbotron.html">Jumbotron</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
