added default template

--- a/assets/html/partials/navbar_pricing.html
+++ b/assets/html/partials/navbar_pricing.html
@@ -6,6 +6,7 @@
     <a class="p-2 text-dark" href="product.html">Product</a>
     <a class="p-2 text-dark" href="starter.html">Starter</a>
     <a class="p-2 text-dark" href="jumbotron.html">Jumbotron</a>
+    <a class="p-2 text-dark" href="default.html">Default</a>
   </nav>
   <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
