--- a/assets/html/partials/navbar_product.html
+++ b/assets/html/partials/navbar_product.html
@@ -8,5 +8,6 @@
     <a class="py-2 d-none d-md-inline-block" href="product.html">Product</a>
     <a class="py-2 d-none d-md-inline-block" href="starter.html">Starter</a>
     <a class="py-2 d-none d-md-inline-block" href="jumbotron.html">Jumbotron</a>
+    <a class="py-2 d-none d-md-inline-block" href="default.html">Default</a>
   </div>
 </nav>
