--- a/assets/html/partials/default.html
+++ b/assets/html/partials/default.html
@@ -6,7 +6,9 @@
  .container {
   max-width: 1140px !important;
   }
-
+  .jumbotron {
+  padding: 1rem 1rem !important; 
+  }
   .alert-pre {
     word-wrap: break-word;
     word-break: break-all;
